k8s/network-policies/ingress-namespace/network-demo-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: network-demo
  labels:
    dbAccess: "true"
