k8s/network-policies/ingress-namespace/network-good-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: network-good
  labels:
    dbAccess: "true"
