k8s/network-policies/ingress-namespace/bad-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad
  namespace: network-bad
  labels:
    name: bad
spec:
  containers:
    - name: postgres-client
      image: achainarong/postgres-client:latest
      command:
        - "sleep"
        - "3600"
      resources:
        limits:
          memory: "128Mi"
          cpu: "100m"
