k8s/network-policies/ingress-namespace/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: whitelist-network-good-namespace
  namespace: network-demo
spec:
  podSelector:
    matchLabels:
      app: "db"
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              dbAccess: "true"
      ports:
        - protocol: TCP
          port: 5432
